# vittorioromeo.com

./: .gitmodules  CMakeLists.txt  README.md  run_webserver.sh  upload_scp.sh
content/: _menu.json
content/_pages/index/_entries/: 0_header.json  180_blog_2016.json
extra/recursive_variant_arity_deduction/: any_type.hpp  testrecvis2.cpp
extra/reflection_ct_benchmarks/: aos_soa_no_print.cpp  aos_soa_no_print_no_ranges.cpp  aos_soa_unedited.cpp  include_meta.cpp  include_print.cpp  pch_meta.hpp  pch_meta_print_ranges.hpp  pch_meta_ranges.hpp  reflect_struct_1.cpp  reflect_struct_20.cpp  results.txt
extra/reflection_enum_to_string_benchmarks/: ench_include_only.cpp  ench_use_1024.cpp  ench_use_16.cpp  ench_use_256.cpp  ench_use_4.cpp  ench_use_64.cpp  enum_to_string.hpp  enum_to_string_importstd.hpp  enum_use_1024.cpp  enum_use_16.cpp  enum_use_256.cpp  enum_use_4.cpp  enum_use_64.cpp  gen.sh  gen_enchantum.sh  gen_importstd.sh  gen_xmacro.sh  gen_xmacro_cc.sh  impstd_include_only.cpp  impstd_use_1024.cpp  impstd_use_16.cpp  impstd_use_256.cpp  impstd_use_4.cpp  impstd_use_64.cpp  include_only.cpp  pch_enum.hpp  results.txt  xm_include_only.cpp  xm_use_1024.cpp  xm_use_16.cpp  xm_use_256.cpp  xm_use_4.cpp  xm_use_64.cpp  xmacro_enum.hpp  xmacro_enum_cc.hpp  xmcc_include_only.cpp  xmcc_use_1024.cpp  xmcc_use_16.cpp  xmcc_use_256.cpp  xmcc_use_4.cpp  (+1 more)
extra/visiting_recursive_variants/: 0_traditional.cpp  1_lambda.cpp  2_lambda_notworking.cpp  detected_arity.cpp  gcc7_segfault.cpp  test_gcc7_stdvariant.cpp  testrecvis.cpp  testrecvis2.cpp  testrecvis3.cpp  tradtest.cpp  variant_aliases.hpp
extra/visiting_variants/: 0_traditional_visitation.cpp  2_lambda_visitation.cpp  variant_aliases.hpp
resources/css/: custom.css  main.css
src/: main.cpp
templates/: page.tpl
templates/base/: main.tpl  mainMenu.tpl
templates/entries/: blog.tpl
templates/other/: disqus.tpl  rss.tpl
(+55 files in other folders)
